# workflow-cycle-detector

./: .gitignore  README.md
backend/: CMakeLists.txt  debug.cpp  debug.hpp  main.cpp  run_server.sh
backend/deliver/: clear_graph.cpp  clear_graph.hpp  edge_deliver.cpp  edge_deliver.hpp  flag_deliver.cpp  flag_deliver.hpp  flow_deliver.cpp  flow_deliver.hpp  node_deliver.cpp  node_deliver.hpp  query_deliver.cpp  query_deliver.hpp
backend/include/: app.hpp  database.hpp  database_instance.cpp  database_instance.hpp
backend/include/flags/: detect_cycle.hpp  disconnected_flow.hpp  negative_cycle.hpp  negative_weight_edge.hpp  orphan_node.hpp
backend/include/services/: execution_service.hpp  rule_service.hpp  workflow_service.hpp
backend/include/utils/: get_uncyclic_min_flow.hpp  get_uncyclic_random_flow.hpp  int_str.hpp  working_flow.hpp
backend/include/workflow/: serializer.hpp  validator.hpp
backend/src/: addEdge.cpp  addNode.cpp  app.cpp  deleteEdge.cpp  deleteNode.cpp  getChields.cpp  getChildren.cpp  getParents.cpp
backend/src/flags/: detect_cycle.cpp  disconnected_flow.cpp  negative_cycle.cpp  negative_weight_edge.cpp  orphan_node.cpp
backend/src/services/: execution_service.cpp  rule_service.cpp  workflow_service.cpp
backend/src/utils/: get_uncyclic_min_flow.cpp  get_uncyclic_random_flow.cpp  str_to_int.cpp  working_flow.cpp
backend/src/workflow/: edgeSerializer.cpp  nodeSerializer.cpp  (+1 more)
backend/tests/: CMakeLists.txt  test_cycle_detection.cpp  test_execution.cpp  test_rule.cpp  test_storage.cpp  test_validation.cpp  test_workflow.cpp
(+5 files in other folders)
